--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/gosiagrajewska" target="_blank"
+            >Gosia Grajewska</a
+          >
+          and is
+          <a
+            href="https://github.com/gosiagrajewska/week6homework"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://resonant-horse-94648d.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
